Fix not visible transparency muster in picker button

--- a/src/scss/color-picker.scss
+++ b/src/scss/color-picker.scss
@@ -10,6 +10,7 @@
 }
 
 .color-picker .button {
+    position: relative;
     margin-bottom: 0.5em;
     height: 2em;
     width: 2em;
@@ -20,6 +21,7 @@
     background: transparent;
     transition: background-color 0.3s;
     font-family: 'Source Sans Pro';
+    @include transparency-background;
 }
 
 .color-picker .app {
@@ -137,6 +139,7 @@
         box-shadow: $small-shadow;
         border-radius: $border-radius;
         overflow: hidden;
+        @include transparency-background;
         
         .last-color {
             cursor: pointer;
@@ -148,16 +151,6 @@
             background: transparent;
             width: 100%;
             height: 50%;
-        }
-        
-        &::before {
-            @include pseudo-reset;
-            width: 100%;
-            height: 100%;
-            background: $transparency-muster;
-            background-size: 0.5em;
-            border-radius: $border-radius;
-            z-index: -1;
         }
     }
     
@@ -177,16 +170,7 @@
             height: 100%;
             box-shadow: $small-shadow;
             border-radius: $border-radius;
-            
-            &::before {
-                @include pseudo-reset;
-                width: 100%;
-                height: 100%;
-                background: $transparency-muster;
-                background-size: 0.5em;
-                border-radius: $border-radius;
-                z-index: -1;
-            }
+            @include transparency-background;
         }
     }
     
@@ -211,7 +195,7 @@
     }
     
     .color-opacity .slider {
-        background: linear-gradient(to bottom, transparent, black), url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 2 2"><path fill="white" d="M1,0H2V1H1V0ZM0,1H1V2H0V1Z"/><path fill="gray" d="M0,0H1V1H0V0ZM1,1H2V2H1V1Z"/></svg>');
+        background: linear-gradient(to bottom, transparent, black), $transparency-muster;
         background-size: 100%, 0.3em;
     }
     
