--- a/src/scss/mixins.scss
+++ b/src/scss/mixins.scss
@@ -1,7 +1,21 @@
+@import 'variables';
+
 // Pseudo style reset
 @mixin pseudo-reset {
     position: absolute;
     content: '';
     top: 0;
     left: 0;
+}
+
+@mixin transparency-background {
+    &::before {
+        @include pseudo-reset;
+        width: 100%;
+        height: 100%;
+        background: $transparency-muster;
+        background-size: 0.5em;
+        border-radius: $border-radius;
+        z-index: -1;
+    }
 }
